// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NudgeCard DOM (pre-extraction pin — THR-1002) > renders a chipless one-off card with no sphere 1`] = `
<button
  aria-pressed="false"
  class="focus-ring"
  data-nudge-blocked=""
  data-nudge-keyword=""
  data-nudge-state="playable"
  data-testid="nudge-card-nudge.steady_hand"
  style="display: flex; flex-direction: column; align-items: stretch; gap: 0px; width: 210px; flex-shrink: 0; padding: 0px; text-align: left; border-radius: 10px; overflow: hidden; background: rgba(255, 255, 255, 0.02); border: 1px solid rgb(var(--veil-gold-rgb) / 0.18); opacity: 1; cursor: pointer; transition: opacity 0.2s ease, border-color 0.2s ease, background 0.2s ease, box-shadow 0.2s ease;"
  type="button"
>
  <div
    aria-label="Steady The Hand"
    data-entity-visual-tier="art"
    data-testid="nudge-card-art-nudge.steady_hand"
    role="img"
    style="position: relative; overflow: hidden; border-radius: 0px; display: flex; align-items: center; justify-content: center; background: linear-gradient(135deg, rgba(88, 60, 120, 0.44) 0%, rgba(10, 10, 15, 0.95) 74%); width: 100%; aspect-ratio: auto; height: 78px; border-width: 0px 0px 1px;"
  >
    <img
      alt="Steady The Hand"
      loading="lazy"
      src="/concept-art/nudge/blessing.jpg"
      style="width: 100%; height: 100%; object-fit: cover; display: block;"
    />
  </div>
  <div
    style="display: flex; flex-direction: column; gap: 6px; padding: 10px 12px 12px; flex: 1 1 0%;"
  >
    <div
      style="display: flex; align-items: center; justify-content: space-between; gap: 6px;"
    >
      <span />
      <span
        style="display: flex; align-items: center; gap: 6px; flex-shrink: 0;"
      >
        <span
          aria-label="2 essence"
          data-cost-framed="true"
          data-cost-pips="2"
          data-testid="nudge-card-cost-nudge.steady_hand"
          role="img"
          style="font-size: 14px; line-height: 1; letter-spacing: 0.14em; color: var(--veil-gold); white-space: nowrap; display: inline-flex; align-items: center; padding: 2px 7px; border-radius: 5px; border: 1px solid rgb(var(--veil-gold-rgb) / 0.4); background: rgb(var(--veil-gold-rgb) / 0.1);"
          title="2 essence"
        >
          <span
            aria-hidden="true"
          >
            ✦✦
          </span>
        </span>
      </span>
    </div>
    <span
      style="font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif; font-size: var(--text-sm); line-height: 1.25; color: var(--veil-text-bright);"
    >
      Steady The Hand
    </span>
    <div
      style="display: flex; flex-direction: column; gap: 4px;"
    >
      <span
        style="font-size: var(--text-xs); line-height: 1.5; color: var(--veil-text-whisper);"
      >
        His grip stops shaking.
      </span>
      <span
        aria-label="Faint, 2 of 5"
        data-pip-filled="2"
        data-pip-tier="faint"
        data-testid="nudge-card-odds-nudge.steady_hand"
        role="img"
        style="font-size: 14px; line-height: 1; letter-spacing: 0.14em; color: rgba(134, 239, 172, 0.9); opacity: 1; white-space: nowrap;"
        title="Faint, 2 of 5"
      >
        <span
          aria-hidden="true"
        >
          ●●○○○
        </span>
      </span>
    </div>
    <div
      style="margin-top: auto;"
    />
  </div>
</button>
`;

exports[`NudgeCard DOM (pre-extraction pin — THR-1002) > renders a dimmed card with its reason 1`] = `
<button
  aria-pressed="false"
  class="focus-ring"
  data-nudge-blocked="essence_unavailable"
  data-nudge-keyword="Boost"
  data-nudge-state="dimmed"
  data-testid="nudge-card-nudge.steady_hand"
  disabled=""
  style="display: flex; flex-direction: column; align-items: stretch; gap: 0px; width: 210px; flex-shrink: 0; padding: 0px; text-align: left; border-radius: 10px; overflow: hidden; background: rgba(255, 255, 255, 0.02); border: 1px solid rgb(var(--veil-gold-rgb) / 0.18); opacity: 0.45; cursor: not-allowed; transition: opacity 0.2s ease, border-color 0.2s ease, background 0.2s ease, box-shadow 0.2s ease;"
  type="button"
>
  <div
    aria-label="Steady The Hand"
    data-entity-visual-tier="art"
    data-testid="nudge-card-art-nudge.steady_hand"
    role="img"
    style="position: relative; overflow: hidden; border-radius: 0px; display: flex; align-items: center; justify-content: center; background: linear-gradient(135deg, rgba(88, 60, 120, 0.44) 0%, rgba(10, 10, 15, 0.95) 74%); width: 100%; aspect-ratio: auto; height: 78px; border-width: 0px 0px 1px;"
  >
    <img
      alt="Steady The Hand"
      loading="lazy"
      src="/concept-art/nudge/blessing.jpg"
      style="width: 100%; height: 100%; object-fit: cover; display: block;"
    />
  </div>
  <div
    style="display: flex; flex-direction: column; gap: 6px; padding: 10px 12px 12px; flex: 1 1 0%;"
  >
    <div
      style="display: flex; align-items: center; justify-content: space-between; gap: 6px;"
    >
      <span
        data-card-keyword="Boost"
        data-testid="nudge-card-keyword-nudge.steady_hand"
        style="display: inline-flex; align-items: center; gap: 4px; padding: 1px 7px; border-radius: 999px; border: 1px solid rgb(var(--veil-gold-rgb) / 0.28); background: rgb(var(--veil-gold-rgb) / 0.07); color: var(--veil-text-bright); font-size: var(--text-xs); letter-spacing: 0.1em; text-transform: uppercase; white-space: nowrap; opacity: 0.55;"
      >
        <span
          aria-hidden="true"
        >
          ◆
        </span>
        Boost
      </span>
      <span
        style="display: flex; align-items: center; gap: 6px; flex-shrink: 0;"
      >
        <span
          aria-label="force"
        >
          <span
            style="display: inline-block;"
          >
            <svg
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="8"
                cy="8"
                fill="#261010"
                r="7"
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-width="1.5"
              />
              <line
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-linecap="round"
                stroke-width="2"
                x1="4.955"
                x2="11.045"
                y1="8"
                y2="8"
              />
              <line
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-linecap="round"
                stroke-width="2"
                x1="8"
                x2="8"
                y1="4.955"
                y2="11.045"
              />
              <line
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-linecap="round"
                stroke-width="2"
                x1="5.8685"
                x2="10.131499999999999"
                y1="5.8685"
                y2="10.131499999999999"
              />
            </svg>
          </span>
        </span>
        <span
          aria-label="2 essence"
          data-cost-framed="true"
          data-cost-pips="2"
          data-testid="nudge-card-cost-nudge.steady_hand"
          role="img"
          style="font-size: 14px; line-height: 1; letter-spacing: 0.14em; color: var(--veil-gold); text-shadow: 0 0 6px var(--veil-gold); white-space: nowrap; display: inline-flex; align-items: center; padding: 2px 7px; border-radius: 5px; border: 1px solid rgb(var(--veil-gold-rgb) / 0.4); background: rgb(var(--veil-gold-rgb) / 0.1);"
          title="2 essence"
        >
          <span
            aria-hidden="true"
          >
            ✦✦
          </span>
        </span>
      </span>
    </div>
    <span
      style="font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif; font-size: var(--text-sm); line-height: 1.25; color: var(--veil-text-bright);"
    >
      Steady The Hand
    </span>
    <div
      style="display: flex; flex-direction: column; gap: 4px;"
    >
      <span
        style="font-size: var(--text-xs); line-height: 1.5; color: var(--veil-text-whisper);"
      >
        His grip stops shaking.
      </span>
      <span
        aria-label="Faint, 2 of 5"
        data-pip-filled="2"
        data-pip-tier="faint"
        data-testid="nudge-card-odds-nudge.steady_hand"
        role="img"
        style="font-size: 14px; line-height: 1; letter-spacing: 0.14em; color: rgba(134, 239, 172, 0.9); opacity: 0.5; white-space: nowrap;"
        title="Faint, 2 of 5"
      >
        <span
          aria-hidden="true"
        >
          ●●○○○
        </span>
      </span>
    </div>
    <div
      style="margin-top: auto;"
    />
    <span
      data-testid="nudge-card-reason-nudge.steady_hand"
      style="font-size: var(--text-xs); color: rgb(var(--veil-loss-rgb) / var(--veil-loss-text-alpha));"
    >
      Not enough essence.
    </span>
  </div>
</button>
`;

exports[`NudgeCard DOM (pre-extraction pin — THR-1002) > renders a selected card 1`] = `
<button
  aria-pressed="true"
  class="focus-ring"
  data-nudge-blocked=""
  data-nudge-keyword="Boost"
  data-nudge-state="selected"
  data-testid="nudge-card-nudge.steady_hand"
  style="display: flex; flex-direction: column; align-items: stretch; gap: 0px; width: 210px; flex-shrink: 0; padding: 0px; text-align: left; border-radius: 10px; overflow: hidden; background: rgb(var(--veil-gold-rgb) / 0.12); border: 1px solid var(--veil-gold); box-shadow: 0 0 12px rgb(var(--veil-gold-rgb) / 0.22); opacity: 1; cursor: pointer; transition: opacity 0.2s ease, border-color 0.2s ease, background 0.2s ease, box-shadow 0.2s ease;"
  type="button"
>
  <div
    aria-label="Steady The Hand"
    data-entity-visual-tier="art"
    data-testid="nudge-card-art-nudge.steady_hand"
    role="img"
    style="position: relative; overflow: hidden; border-radius: 0px; display: flex; align-items: center; justify-content: center; background: linear-gradient(135deg, rgba(88, 60, 120, 0.44) 0%, rgba(10, 10, 15, 0.95) 74%); width: 100%; aspect-ratio: auto; height: 78px; border-width: 0px 0px 1px;"
  >
    <img
      alt="Steady The Hand"
      loading="lazy"
      src="/concept-art/nudge/blessing.jpg"
      style="width: 100%; height: 100%; object-fit: cover; display: block;"
    />
  </div>
  <div
    style="display: flex; flex-direction: column; gap: 6px; padding: 10px 12px 12px; flex: 1 1 0%;"
  >
    <div
      style="display: flex; align-items: center; justify-content: space-between; gap: 6px;"
    >
      <span
        data-card-keyword="Boost"
        data-testid="nudge-card-keyword-nudge.steady_hand"
        style="display: inline-flex; align-items: center; gap: 4px; padding: 1px 7px; border-radius: 999px; border: 1px solid rgb(var(--veil-gold-rgb) / 0.28); background: rgb(var(--veil-gold-rgb) / 0.07); color: var(--veil-text-bright); font-size: var(--text-xs); letter-spacing: 0.1em; text-transform: uppercase; white-space: nowrap; opacity: 1;"
      >
        <span
          aria-hidden="true"
        >
          ◆
        </span>
        Boost
      </span>
      <span
        style="display: flex; align-items: center; gap: 6px; flex-shrink: 0;"
      >
        <span
          aria-label="force"
        >
          <span
            style="display: inline-block;"
          >
            <svg
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="8"
                cy="8"
                fill="#261010"
                r="7"
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-width="1.5"
              />
              <line
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-linecap="round"
                stroke-width="2"
                x1="4.955"
                x2="11.045"
                y1="8"
                y2="8"
              />
              <line
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-linecap="round"
                stroke-width="2"
                x1="8"
                x2="8"
                y1="4.955"
                y2="11.045"
              />
              <line
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-linecap="round"
                stroke-width="2"
                x1="5.8685"
                x2="10.131499999999999"
                y1="5.8685"
                y2="10.131499999999999"
              />
            </svg>
          </span>
        </span>
        <span
          aria-label="2 essence"
          data-cost-framed="true"
          data-cost-pips="2"
          data-testid="nudge-card-cost-nudge.steady_hand"
          role="img"
          style="font-size: 14px; line-height: 1; letter-spacing: 0.14em; color: var(--veil-gold); white-space: nowrap; display: inline-flex; align-items: center; padding: 2px 7px; border-radius: 5px; border: 1px solid rgb(var(--veil-gold-rgb) / 0.4); background: rgb(var(--veil-gold-rgb) / 0.1);"
          title="2 essence"
        >
          <span
            aria-hidden="true"
          >
            ✦✦
          </span>
        </span>
      </span>
    </div>
    <span
      style="font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif; font-size: var(--text-sm); line-height: 1.25; color: var(--veil-gold);"
    >
      Steady The Hand
    </span>
    <div
      style="display: flex; flex-direction: column; gap: 4px;"
    >
      <span
        style="font-size: var(--text-xs); line-height: 1.5; color: var(--veil-text-whisper);"
      >
        His grip stops shaking.
      </span>
      <span
        aria-label="Faint, 2 of 5"
        data-pip-filled="2"
        data-pip-tier="faint"
        data-testid="nudge-card-odds-nudge.steady_hand"
        role="img"
        style="font-size: 14px; line-height: 1; letter-spacing: 0.14em; color: rgba(134, 239, 172, 0.9); opacity: 1; white-space: nowrap;"
        title="Faint, 2 of 5"
      >
        <span
          aria-hidden="true"
        >
          ●●○○○
        </span>
      </span>
    </div>
    <div
      style="margin-top: auto;"
    />
  </div>
</button>
`;

exports[`NudgeCard DOM (pre-extraction pin — THR-1002) > renders alternate cost channels 1`] = `
<button
  aria-pressed="false"
  class="focus-ring"
  data-nudge-blocked=""
  data-nudge-keyword="Boost"
  data-nudge-state="playable"
  data-testid="nudge-card-nudge.steady_hand"
  style="display: flex; flex-direction: column; align-items: stretch; gap: 0px; width: 210px; flex-shrink: 0; padding: 0px; text-align: left; border-radius: 10px; overflow: hidden; background: rgba(255, 255, 255, 0.02); border: 1px solid rgb(var(--veil-gold-rgb) / 0.18); opacity: 1; cursor: pointer; transition: opacity 0.2s ease, border-color 0.2s ease, background 0.2s ease, box-shadow 0.2s ease;"
  type="button"
>
  <div
    aria-label="Steady The Hand"
    data-entity-visual-tier="art"
    data-testid="nudge-card-art-nudge.steady_hand"
    role="img"
    style="position: relative; overflow: hidden; border-radius: 0px; display: flex; align-items: center; justify-content: center; background: linear-gradient(135deg, rgba(88, 60, 120, 0.44) 0%, rgba(10, 10, 15, 0.95) 74%); width: 100%; aspect-ratio: auto; height: 78px; border-width: 0px 0px 1px;"
  >
    <img
      alt="Steady The Hand"
      loading="lazy"
      src="/concept-art/nudge/blessing.jpg"
      style="width: 100%; height: 100%; object-fit: cover; display: block;"
    />
  </div>
  <div
    style="display: flex; flex-direction: column; gap: 6px; padding: 10px 12px 12px; flex: 1 1 0%;"
  >
    <div
      style="display: flex; align-items: center; justify-content: space-between; gap: 6px;"
    >
      <span
        data-card-keyword="Boost"
        data-testid="nudge-card-keyword-nudge.steady_hand"
        style="display: inline-flex; align-items: center; gap: 4px; padding: 1px 7px; border-radius: 999px; border: 1px solid rgb(var(--veil-gold-rgb) / 0.28); background: rgb(var(--veil-gold-rgb) / 0.07); color: var(--veil-text-bright); font-size: var(--text-xs); letter-spacing: 0.1em; text-transform: uppercase; white-space: nowrap; opacity: 1;"
      >
        <span
          aria-hidden="true"
        >
          ◆
        </span>
        Boost
      </span>
      <span
        style="display: flex; align-items: center; gap: 6px; flex-shrink: 0;"
      >
        <span
          aria-label="force"
        >
          <span
            style="display: inline-block;"
          >
            <svg
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="8"
                cy="8"
                fill="#261010"
                r="7"
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-width="1.5"
              />
              <line
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-linecap="round"
                stroke-width="2"
                x1="4.955"
                x2="11.045"
                y1="8"
                y2="8"
              />
              <line
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-linecap="round"
                stroke-width="2"
                x1="8"
                x2="8"
                y1="4.955"
                y2="11.045"
              />
              <line
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-linecap="round"
                stroke-width="2"
                x1="5.8685"
                x2="10.131499999999999"
                y1="5.8685"
                y2="10.131499999999999"
              />
            </svg>
          </span>
        </span>
        <span
          aria-label="2 essence"
          data-cost-framed="true"
          data-cost-pips="2"
          data-testid="nudge-card-cost-nudge.steady_hand"
          role="img"
          style="font-size: 14px; line-height: 1; letter-spacing: 0.14em; color: var(--veil-gold); white-space: nowrap; display: inline-flex; align-items: center; padding: 2px 7px; border-radius: 5px; border: 1px solid rgb(var(--veil-gold-rgb) / 0.4); background: rgb(var(--veil-gold-rgb) / 0.1);"
          title="2 essence"
        >
          <span
            aria-hidden="true"
          >
            ✦✦
          </span>
        </span>
      </span>
    </div>
    <span
      style="font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif; font-size: var(--text-sm); line-height: 1.25; color: var(--veil-text-bright);"
    >
      Steady The Hand
    </span>
    <div
      style="display: flex; flex-direction: column; gap: 2px;"
    >
      <span
        data-testid="nudge-card-channel-nudge.steady_hand-detection"
        style="display: flex; align-items: center; gap: 5px; font-size: var(--text-xs); color: var(--veil-text-warm);"
      >
        <span
          aria-hidden="true"
        >
          ⚖
        </span>
        Mortals may notice
        <span
          aria-label="Penalty, 1"
          data-pip-filled="1"
          data-pip-tier="penalty"
          role="img"
          style="font-size: 10px; line-height: 1; letter-spacing: 0.14em; color: rgba(248, 113, 113, 0.9); opacity: 1; white-space: nowrap;"
          title="Penalty, 1"
        >
          <span
            aria-hidden="true"
          >
            ▼
          </span>
        </span>
      </span>
      <span
        data-testid="nudge-card-channel-nudge.steady_hand-doom"
        style="display: flex; align-items: center; gap: 5px; font-size: var(--text-xs); color: var(--veil-text-warm);"
      >
        <span
          aria-hidden="true"
        >
          ☼
        </span>
        The clock eases
      </span>
    </div>
    <div
      style="display: flex; flex-direction: column; gap: 4px;"
    >
      <span
        style="font-size: var(--text-xs); line-height: 1.5; color: var(--veil-text-whisper);"
      >
        His grip stops shaking.
      </span>
      <span
        aria-label="Faint, 2 of 5"
        data-pip-filled="2"
        data-pip-tier="faint"
        data-testid="nudge-card-odds-nudge.steady_hand"
        role="img"
        style="font-size: 14px; line-height: 1; letter-spacing: 0.14em; color: rgba(134, 239, 172, 0.9); opacity: 1; white-space: nowrap;"
        title="Faint, 2 of 5"
      >
        <span
          aria-hidden="true"
        >
          ●●○○○
        </span>
      </span>
    </div>
    <div
      style="margin-top: auto;"
    />
  </div>
</button>
`;

exports[`NudgeCard DOM (pre-extraction pin — THR-1002) > renders provenance with a tooltipped concept 1`] = `
<button
  aria-pressed="false"
  class="focus-ring"
  data-nudge-blocked=""
  data-nudge-keyword="Boost"
  data-nudge-state="playable"
  data-testid="nudge-card-nudge.steady_hand"
  style="display: flex; flex-direction: column; align-items: stretch; gap: 0px; width: 210px; flex-shrink: 0; padding: 0px; text-align: left; border-radius: 10px; overflow: hidden; background: rgba(255, 255, 255, 0.02); border: 1px solid rgb(var(--veil-gold-rgb) / 0.18); opacity: 1; cursor: pointer; transition: opacity 0.2s ease, border-color 0.2s ease, background 0.2s ease, box-shadow 0.2s ease;"
  type="button"
>
  <div
    aria-label="Steady The Hand"
    data-entity-visual-tier="art"
    data-testid="nudge-card-art-nudge.steady_hand"
    role="img"
    style="position: relative; overflow: hidden; border-radius: 0px; display: flex; align-items: center; justify-content: center; background: linear-gradient(135deg, rgba(88, 60, 120, 0.44) 0%, rgba(10, 10, 15, 0.95) 74%); width: 100%; aspect-ratio: auto; height: 78px; border-width: 0px 0px 1px;"
  >
    <img
      alt="Steady The Hand"
      loading="lazy"
      src="/concept-art/nudge/blessing.jpg"
      style="width: 100%; height: 100%; object-fit: cover; display: block;"
    />
  </div>
  <div
    style="display: flex; flex-direction: column; gap: 6px; padding: 10px 12px 12px; flex: 1 1 0%;"
  >
    <div
      style="display: flex; align-items: center; justify-content: space-between; gap: 6px;"
    >
      <span
        data-card-keyword="Boost"
        data-testid="nudge-card-keyword-nudge.steady_hand"
        style="display: inline-flex; align-items: center; gap: 4px; padding: 1px 7px; border-radius: 999px; border: 1px solid rgb(var(--veil-gold-rgb) / 0.28); background: rgb(var(--veil-gold-rgb) / 0.07); color: var(--veil-text-bright); font-size: var(--text-xs); letter-spacing: 0.1em; text-transform: uppercase; white-space: nowrap; opacity: 1;"
      >
        <span
          aria-hidden="true"
        >
          ◆
        </span>
        Boost
      </span>
      <span
        style="display: flex; align-items: center; gap: 6px; flex-shrink: 0;"
      >
        <span
          aria-label="force"
        >
          <span
            style="display: inline-block;"
          >
            <svg
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="8"
                cy="8"
                fill="#261010"
                r="7"
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-width="1.5"
              />
              <line
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-linecap="round"
                stroke-width="2"
                x1="4.955"
                x2="11.045"
                y1="8"
                y2="8"
              />
              <line
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-linecap="round"
                stroke-width="2"
                x1="8"
                x2="8"
                y1="4.955"
                y2="11.045"
              />
              <line
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-linecap="round"
                stroke-width="2"
                x1="5.8685"
                x2="10.131499999999999"
                y1="5.8685"
                y2="10.131499999999999"
              />
            </svg>
          </span>
        </span>
        <span
          aria-label="2 essence"
          data-cost-framed="true"
          data-cost-pips="2"
          data-testid="nudge-card-cost-nudge.steady_hand"
          role="img"
          style="font-size: 14px; line-height: 1; letter-spacing: 0.14em; color: var(--veil-gold); white-space: nowrap; display: inline-flex; align-items: center; padding: 2px 7px; border-radius: 5px; border: 1px solid rgb(var(--veil-gold-rgb) / 0.4); background: rgb(var(--veil-gold-rgb) / 0.1);"
          title="2 essence"
        >
          <span
            aria-hidden="true"
          >
            ✦✦
          </span>
        </span>
      </span>
    </div>
    <span
      style="font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif; font-size: var(--text-sm); line-height: 1.25; color: var(--veil-text-bright);"
    >
      Steady The Hand
    </span>
    <span
      aria-label="From your repertoire — Darkness signature"
      data-testid="nudge-card-provenance-nudge.steady_hand"
      style="font-size: var(--text-2xs, 11px); line-height: 1.4; color: var(--veil-text-warm); opacity: 0.85;"
    >
      From your repertoire
       — 
      <span
        class="focus-ring"
        style="display: inline-block; cursor: inherit;"
        tabindex="0"
      >
        <span
          style="color: var(--text-secondary);"
        >
          Darkness
        </span>
      </span>
       
      signature
    </span>
    <div
      style="display: flex; flex-direction: column; gap: 4px;"
    >
      <span
        style="font-size: var(--text-xs); line-height: 1.5; color: var(--veil-text-whisper);"
      >
        His grip stops shaking.
      </span>
      <span
        aria-label="Faint, 2 of 5"
        data-pip-filled="2"
        data-pip-tier="faint"
        data-testid="nudge-card-odds-nudge.steady_hand"
        role="img"
        style="font-size: 14px; line-height: 1; letter-spacing: 0.14em; color: rgba(134, 239, 172, 0.9); opacity: 1; white-space: nowrap;"
        title="Faint, 2 of 5"
      >
        <span
          aria-hidden="true"
        >
          ●●○○○
        </span>
      </span>
    </div>
    <div
      style="margin-top: auto;"
    />
  </div>
</button>
`;

exports[`NudgeCard DOM (pre-extraction pin — THR-1002) > renders provenance without a concept 1`] = `
<button
  aria-pressed="false"
  class="focus-ring"
  data-nudge-blocked=""
  data-nudge-keyword="Boost"
  data-nudge-state="playable"
  data-testid="nudge-card-nudge.steady_hand"
  style="display: flex; flex-direction: column; align-items: stretch; gap: 0px; width: 210px; flex-shrink: 0; padding: 0px; text-align: left; border-radius: 10px; overflow: hidden; background: rgba(255, 255, 255, 0.02); border: 1px solid rgb(var(--veil-gold-rgb) / 0.18); opacity: 1; cursor: pointer; transition: opacity 0.2s ease, border-color 0.2s ease, background 0.2s ease, box-shadow 0.2s ease;"
  type="button"
>
  <div
    aria-label="Steady The Hand"
    data-entity-visual-tier="art"
    data-testid="nudge-card-art-nudge.steady_hand"
    role="img"
    style="position: relative; overflow: hidden; border-radius: 0px; display: flex; align-items: center; justify-content: center; background: linear-gradient(135deg, rgba(88, 60, 120, 0.44) 0%, rgba(10, 10, 15, 0.95) 74%); width: 100%; aspect-ratio: auto; height: 78px; border-width: 0px 0px 1px;"
  >
    <img
      alt="Steady The Hand"
      loading="lazy"
      src="/concept-art/nudge/blessing.jpg"
      style="width: 100%; height: 100%; object-fit: cover; display: block;"
    />
  </div>
  <div
    style="display: flex; flex-direction: column; gap: 6px; padding: 10px 12px 12px; flex: 1 1 0%;"
  >
    <div
      style="display: flex; align-items: center; justify-content: space-between; gap: 6px;"
    >
      <span
        data-card-keyword="Boost"
        data-testid="nudge-card-keyword-nudge.steady_hand"
        style="display: inline-flex; align-items: center; gap: 4px; padding: 1px 7px; border-radius: 999px; border: 1px solid rgb(var(--veil-gold-rgb) / 0.28); background: rgb(var(--veil-gold-rgb) / 0.07); color: var(--veil-text-bright); font-size: var(--text-xs); letter-spacing: 0.1em; text-transform: uppercase; white-space: nowrap; opacity: 1;"
      >
        <span
          aria-hidden="true"
        >
          ◆
        </span>
        Boost
      </span>
      <span
        style="display: flex; align-items: center; gap: 6px; flex-shrink: 0;"
      >
        <span
          aria-label="force"
        >
          <span
            style="display: inline-block;"
          >
            <svg
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="8"
                cy="8"
                fill="#261010"
                r="7"
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-width="1.5"
              />
              <line
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-linecap="round"
                stroke-width="2"
                x1="4.955"
                x2="11.045"
                y1="8"
                y2="8"
              />
              <line
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-linecap="round"
                stroke-width="2"
                x1="8"
                x2="8"
                y1="4.955"
                y2="11.045"
              />
              <line
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-linecap="round"
                stroke-width="2"
                x1="5.8685"
                x2="10.131499999999999"
                y1="5.8685"
                y2="10.131499999999999"
              />
            </svg>
          </span>
        </span>
        <span
          aria-label="2 essence"
          data-cost-framed="true"
          data-cost-pips="2"
          data-testid="nudge-card-cost-nudge.steady_hand"
          role="img"
          style="font-size: 14px; line-height: 1; letter-spacing: 0.14em; color: var(--veil-gold); white-space: nowrap; display: inline-flex; align-items: center; padding: 2px 7px; border-radius: 5px; border: 1px solid rgb(var(--veil-gold-rgb) / 0.4); background: rgb(var(--veil-gold-rgb) / 0.1);"
          title="2 essence"
        >
          <span
            aria-hidden="true"
          >
            ✦✦
          </span>
        </span>
      </span>
    </div>
    <span
      style="font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif; font-size: var(--text-sm); line-height: 1.25; color: var(--veil-text-bright);"
    >
      Steady The Hand
    </span>
    <span
      aria-label="From your repertoire"
      data-testid="nudge-card-provenance-nudge.steady_hand"
      style="font-size: var(--text-2xs, 11px); line-height: 1.4; color: var(--veil-text-warm); opacity: 0.85;"
    >
      From your repertoire
    </span>
    <div
      style="display: flex; flex-direction: column; gap: 4px;"
    >
      <span
        style="font-size: var(--text-xs); line-height: 1.5; color: var(--veil-text-whisper);"
      >
        His grip stops shaking.
      </span>
      <span
        aria-label="Faint, 2 of 5"
        data-pip-filled="2"
        data-pip-tier="faint"
        data-testid="nudge-card-odds-nudge.steady_hand"
        role="img"
        style="font-size: 14px; line-height: 1; letter-spacing: 0.14em; color: rgba(134, 239, 172, 0.9); opacity: 1; white-space: nowrap;"
        title="Faint, 2 of 5"
      >
        <span
          aria-hidden="true"
        >
          ●●○○○
        </span>
      </span>
    </div>
    <div
      style="margin-top: auto;"
    />
  </div>
</button>
`;

exports[`NudgeCard DOM (pre-extraction pin — THR-1002) > renders the designer view line 1`] = `
<button
  aria-pressed="false"
  class="focus-ring"
  data-nudge-blocked=""
  data-nudge-keyword="Boost"
  data-nudge-state="playable"
  data-testid="nudge-card-nudge.steady_hand"
  style="display: flex; flex-direction: column; align-items: stretch; gap: 0px; width: 210px; flex-shrink: 0; padding: 0px; text-align: left; border-radius: 10px; overflow: hidden; background: rgba(255, 255, 255, 0.02); border: 1px solid rgb(var(--veil-gold-rgb) / 0.18); opacity: 1; cursor: pointer; transition: opacity 0.2s ease, border-color 0.2s ease, background 0.2s ease, box-shadow 0.2s ease;"
  type="button"
>
  <div
    aria-label="Steady The Hand"
    data-entity-visual-tier="art"
    data-testid="nudge-card-art-nudge.steady_hand"
    role="img"
    style="position: relative; overflow: hidden; border-radius: 0px; display: flex; align-items: center; justify-content: center; background: linear-gradient(135deg, rgba(88, 60, 120, 0.44) 0%, rgba(10, 10, 15, 0.95) 74%); width: 100%; aspect-ratio: auto; height: 78px; border-width: 0px 0px 1px;"
  >
    <img
      alt="Steady The Hand"
      loading="lazy"
      src="/concept-art/nudge/blessing.jpg"
      style="width: 100%; height: 100%; object-fit: cover; display: block;"
    />
  </div>
  <div
    style="display: flex; flex-direction: column; gap: 6px; padding: 10px 12px 12px; flex: 1 1 0%;"
  >
    <div
      style="display: flex; align-items: center; justify-content: space-between; gap: 6px;"
    >
      <span
        data-card-keyword="Boost"
        data-testid="nudge-card-keyword-nudge.steady_hand"
        style="display: inline-flex; align-items: center; gap: 4px; padding: 1px 7px; border-radius: 999px; border: 1px solid rgb(var(--veil-gold-rgb) / 0.28); background: rgb(var(--veil-gold-rgb) / 0.07); color: var(--veil-text-bright); font-size: var(--text-xs); letter-spacing: 0.1em; text-transform: uppercase; white-space: nowrap; opacity: 1;"
      >
        <span
          aria-hidden="true"
        >
          ◆
        </span>
        Boost
      </span>
      <span
        style="display: flex; align-items: center; gap: 6px; flex-shrink: 0;"
      >
        <span
          aria-label="force"
        >
          <span
            style="display: inline-block;"
          >
            <svg
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="8"
                cy="8"
                fill="#261010"
                r="7"
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-width="1.5"
              />
              <line
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-linecap="round"
                stroke-width="2"
                x1="4.955"
                x2="11.045"
                y1="8"
                y2="8"
              />
              <line
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-linecap="round"
                stroke-width="2"
                x1="8"
                x2="8"
                y1="4.955"
                y2="11.045"
              />
              <line
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-linecap="round"
                stroke-width="2"
                x1="5.8685"
                x2="10.131499999999999"
                y1="5.8685"
                y2="10.131499999999999"
              />
            </svg>
          </span>
        </span>
        <span
          aria-label="2 essence"
          data-cost-framed="true"
          data-cost-pips="2"
          data-testid="nudge-card-cost-nudge.steady_hand"
          role="img"
          style="font-size: 14px; line-height: 1; letter-spacing: 0.14em; color: var(--veil-gold); white-space: nowrap; display: inline-flex; align-items: center; padding: 2px 7px; border-radius: 5px; border: 1px solid rgb(var(--veil-gold-rgb) / 0.4); background: rgb(var(--veil-gold-rgb) / 0.1);"
          title="2 essence"
        >
          <span
            aria-hidden="true"
          >
            ✦✦
          </span>
        </span>
      </span>
    </div>
    <span
      style="font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif; font-size: var(--text-sm); line-height: 1.25; color: var(--veil-text-bright);"
    >
      Steady The Hand
    </span>
    <div
      style="display: flex; flex-direction: column; gap: 4px;"
    >
      <span
        style="font-size: var(--text-xs); line-height: 1.5; color: var(--veil-text-whisper);"
      >
        His grip stops shaking.
      </span>
      <span
        aria-label="Faint, 2 of 5"
        data-pip-filled="2"
        data-pip-tier="faint"
        data-testid="nudge-card-odds-nudge.steady_hand"
        role="img"
        style="font-size: 14px; line-height: 1; letter-spacing: 0.14em; color: rgba(134, 239, 172, 0.9); opacity: 1; white-space: nowrap;"
        title="Faint, 2 of 5"
      >
        <span
          aria-hidden="true"
        >
          ●●○○○
        </span>
      </span>
    </div>
    <div
      style="margin-top: auto;"
    />
    <span
      style="font-size: var(--text-xs); color: var(--veil-text-whisper); font-family: monospace;"
    >
      Δ
      0.080
       · discounted
       · waxing
    </span>
  </div>
</button>
`;

exports[`NudgeCard DOM (pre-extraction pin — THR-1002) > renders the ordinary card 1`] = `
<button
  aria-pressed="false"
  class="focus-ring"
  data-nudge-blocked=""
  data-nudge-keyword="Boost"
  data-nudge-state="playable"
  data-testid="nudge-card-nudge.steady_hand"
  style="display: flex; flex-direction: column; align-items: stretch; gap: 0px; width: 210px; flex-shrink: 0; padding: 0px; text-align: left; border-radius: 10px; overflow: hidden; background: rgba(255, 255, 255, 0.02); border: 1px solid rgb(var(--veil-gold-rgb) / 0.18); opacity: 1; cursor: pointer; transition: opacity 0.2s ease, border-color 0.2s ease, background 0.2s ease, box-shadow 0.2s ease;"
  type="button"
>
  <div
    aria-label="Steady The Hand"
    data-entity-visual-tier="art"
    data-testid="nudge-card-art-nudge.steady_hand"
    role="img"
    style="position: relative; overflow: hidden; border-radius: 0px; display: flex; align-items: center; justify-content: center; background: linear-gradient(135deg, rgba(88, 60, 120, 0.44) 0%, rgba(10, 10, 15, 0.95) 74%); width: 100%; aspect-ratio: auto; height: 78px; border-width: 0px 0px 1px;"
  >
    <img
      alt="Steady The Hand"
      loading="lazy"
      src="/concept-art/nudge/blessing.jpg"
      style="width: 100%; height: 100%; object-fit: cover; display: block;"
    />
  </div>
  <div
    style="display: flex; flex-direction: column; gap: 6px; padding: 10px 12px 12px; flex: 1 1 0%;"
  >
    <div
      style="display: flex; align-items: center; justify-content: space-between; gap: 6px;"
    >
      <span
        data-card-keyword="Boost"
        data-testid="nudge-card-keyword-nudge.steady_hand"
        style="display: inline-flex; align-items: center; gap: 4px; padding: 1px 7px; border-radius: 999px; border: 1px solid rgb(var(--veil-gold-rgb) / 0.28); background: rgb(var(--veil-gold-rgb) / 0.07); color: var(--veil-text-bright); font-size: var(--text-xs); letter-spacing: 0.1em; text-transform: uppercase; white-space: nowrap; opacity: 1;"
      >
        <span
          aria-hidden="true"
        >
          ◆
        </span>
        Boost
      </span>
      <span
        style="display: flex; align-items: center; gap: 6px; flex-shrink: 0;"
      >
        <span
          aria-label="force"
        >
          <span
            style="display: inline-block;"
          >
            <svg
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="8"
                cy="8"
                fill="#261010"
                r="7"
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-width="1.5"
              />
              <line
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-linecap="round"
                stroke-width="2"
                x1="4.955"
                x2="11.045"
                y1="8"
                y2="8"
              />
              <line
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-linecap="round"
                stroke-width="2"
                x1="8"
                x2="8"
                y1="4.955"
                y2="11.045"
              />
              <line
                stroke="var(--sphere-force-bright, #ff6b6b)"
                stroke-linecap="round"
                stroke-width="2"
                x1="5.8685"
                x2="10.131499999999999"
                y1="5.8685"
                y2="10.131499999999999"
              />
            </svg>
          </span>
        </span>
        <span
          aria-label="2 essence"
          data-cost-framed="true"
          data-cost-pips="2"
          data-testid="nudge-card-cost-nudge.steady_hand"
          role="img"
          style="font-size: 14px; line-height: 1; letter-spacing: 0.14em; color: var(--veil-gold); white-space: nowrap; display: inline-flex; align-items: center; padding: 2px 7px; border-radius: 5px; border: 1px solid rgb(var(--veil-gold-rgb) / 0.4); background: rgb(var(--veil-gold-rgb) / 0.1);"
          title="2 essence"
        >
          <span
            aria-hidden="true"
          >
            ✦✦
          </span>
        </span>
      </span>
    </div>
    <span
      style="font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif; font-size: var(--text-sm); line-height: 1.25; color: var(--veil-text-bright);"
    >
      Steady The Hand
    </span>
    <div
      style="display: flex; flex-direction: column; gap: 4px;"
    >
      <span
        style="font-size: var(--text-xs); line-height: 1.5; color: var(--veil-text-whisper);"
      >
        His grip stops shaking.
      </span>
      <span
        aria-label="Faint, 2 of 5"
        data-pip-filled="2"
        data-pip-tier="faint"
        data-testid="nudge-card-odds-nudge.steady_hand"
        role="img"
        style="font-size: 14px; line-height: 1; letter-spacing: 0.14em; color: rgba(134, 239, 172, 0.9); opacity: 1; white-space: nowrap;"
        title="Faint, 2 of 5"
      >
        <span
          aria-hidden="true"
        >
          ●●○○○
        </span>
      </span>
    </div>
    <div
      style="margin-top: auto;"
    />
  </div>
</button>
`;
